API docs for unfollowUser Endpoint
